# MSAI-630-ArgueBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy-frontend.yml
api/: __init__.py  auth.py  debate_manager.py  main.py
examples/: sample_debate.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  components.css  index.css  seedMotions.ts  turnPlan.ts  types.ts
frontend/src/api/: auth.ts  client.ts  config.ts
frontend/src/components/: AgentAvatar.tsx  AgentCard.tsx  ChatBubble.tsx  ChatComposer.tsx  ChatThread.tsx  ExportButtons.tsx  FailureAnalysis.tsx  LoginPage.tsx  Logo.tsx  RoundStepper.tsx  RulesPanel.tsx  ScorePanel.tsx  Sidebar.tsx  StatusBar.tsx  Transcript.tsx  TypingIndicator.tsx  VerdictPanel.tsx
frontend/src/hooks/: useAuth.ts  useDebate.ts  useTypewriter.ts
src/: __init__.py  agents.py  config.py  memory.py  models.py  orchestrator.py  prompts.py  scoring.py  utils.py
tests/: __init__.py  test_auth.py  test_orchestrator.py  test_role_consistency.py  test_scoring.py
