[project]
name = "arguebot"
version = "0.1.0"
description = "Multi-agent autonomous debate system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
